--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.1",
+    "express": "^4.19.2",
     "joi": "^17.12.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.6"
   },
