--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "route": "^0.2.5",
+    "routes": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
