--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.19.2",
     "joi": "^17.12.2",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
